project/css/new-age.css
/* ... */
@media (min-width: 780px) {
  .resizePadding {
    padding-left: 15px;
    padding-right: 15px;
  }
  .card li {
    font-size: 1rem;
  }
}

.doubleMargin {
  margin-top: 20px;
}

@media (min-width: 992px) {
  .doubleMargin {
    margin-top: 10px;
  }
}

section.signature {
  padding: 30px 0;
}

.signature {
  display: flex;
  justify-content: center;
  align-content: center;
}

.signature .CGI {
  height: 70px;
  width: auto;
}

.signature p {
  align-self: center;
  margin: 0;
  color: #3C3C3C;
}

.align-center {
  text-align: center;
  font-size: 10px!important;
  margin-right: 5px;
}

section.legal {
  padding-bottom: 80px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

section.legal button{
  border-radius: 7px;
  background-color: #0090EA;
  width: 85px;
  align-self: center;
  margin-top: 30px;
  padding: 5px 10px;
}

section.legal a{
  color: white;
  text-decoration: none;
}

footer {
  padding: 25px 0;
  text-align: center;
  color: rgba(255, 255, 255, 0.3);
  background-color: #222222;
}

footer p {
  font-size: 12px;
  margin: 0;
}

footer ul {
  margin-bottom: 0;
}

footer ul li a {
  font-size: 12px;
  color: rgba(255, 255, 255, 0.5);
}

footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
  text-decoration: none;
}

.bg-primary {
  background: white !important;
}

.text-primary {
  color: #0090EA;
}

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0;
}

.btn-outline {
  color: white;
  border: 1px solid;
  border-color: white;
}

.btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
  color: white;
  border-color: #0090EA;
  background-color: #0090EA;
}

.btn {
  border-radius: 300px;
  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
  letter-spacing: 2px;
  text-transform: uppercase;
}

.btn-xl {
  font-size: 11px;
  padding: 15px 45px;
}

